Opened 5 years ago
Closed 5 years ago
#15348 closed bug (fixed)
Automatically print syslog tail on "panic: no boot partitions"
Reported by: | waddlesplash | Owned by: | waddlesplash |
---|---|---|---|
Priority: | normal | Milestone: | R1/beta2 |
Component: | System/Kernel | Version: | R1/Development |
Keywords: | Cc: | ||
Blocked By: | Blocking: | ||
Platform: | All |
Description
Panic strings in the kernel can use "@!" followed by a list of commands to automatically execute things on dropping to KDL. Example: https://xref.plausible.coop/source/xref/haiku/headers/private/kernel/vm/vm_types.h#226
We should print the last 15 lines or so when dropping to KDL here, because the message itself does not tell why no boot partitions were found.
Note:
See TracTickets
for help on using tickets.
Fixed in hrev53482.