kernel/fs: Automatically tail syslog on "no boot partitions".

The real reason none were found is likely in the syslog.
Even if the last 15 messages do not have the real error, they
may be enough to point towards what the problem is, or at least
uniquely identify the issue.

Fixes #15348.